# Vending-Machine

./: CMakeLists.txt  README.md  main.cpp
Domain/: Coin.cpp  Coin.h  Product.cpp  Product.h  Validator.cpp  Validator.h
Repository/: IRepo.h  RepoInFile.h  RepoInMemory.h  RepositoryException.h
Service/: CoinService.cpp  CoinService.h  Service.cpp  Service.h
Tests/: Tests.cpp  Tests.h
UI/: Console.cpp  Console.h
